--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,6 +1,8 @@
 # AI Provider Configuration
 ANTHROPIC_API_KEY=sk-ant-xxxxx
 CLAUDE_MODEL=claude-sonnet-4-5-20250929
+AI_TIMEOUT_SECONDS=120
+AI_MAX_TOKENS=8000
 
 # Telegram Notifications
 TELEGRAM_BOT_TOKEN=1234567890:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
