Add Drupal watchdog export script
Introduce `export-drupal-watchdog.sh` for exporting Drupal watchdog logs using drush, with support for filters, formats, and environment configuration. Updated `.env.example` with additional settings for Drupal integration.

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -17,12 +17,20 @@ LOG_SOURCE_TYPE=logwatch
 LOGWATCH_OUTPUT_PATH=/tmp/logwatch-output.txt
 
 # Drupal Watchdog Configuration (used when LOG_SOURCE_TYPE=drupal_watchdog)
+# Path to Drupal project root (for export script)
+DRUPAL_ROOT=/var/www/html
 # Path to the watchdog export file (JSON or drush output)
-DRUPAL_WATCHDOG_PATH=/var/log/drupal-watchdog.json
+DRUPAL_WATCHDOG_PATH=/tmp/drupal-watchdog.json
 # Format of the watchdog file: "json" (recommended) or "drush"
 DRUPAL_WATCHDOG_FORMAT=json
 # Optional: Site name for multi-site deployments
 DRUPAL_SITE_NAME=
+# Minimum severity level to include (0-7, default: 3=error)
+# 0=emergency, 1=alert, 2=critical, 3=error, 4=warning, 5=notice, 6=info, 7=debug
+# Setting to 3 means: include errors and higher (emergency, alert, critical, error)
+DRUPAL_MIN_SEVERITY=3
+# Maximum number of entries in output file (default: 100)
+DRUPAL_WATCHDOG_LIMIT=100
 
 # Common Log Settings
 MAX_LOG_SIZE_MB=10
