Add LLM model/provider info to Telegram reports
Display the LLM model name and provider in Telegram notification
reports so users can easily see which AI backend analyzed their logs.

Changes:
- Add Provider and Model fields to ai.Stats struct
- Set provider/model in both Anthropic and Ollama clients
- Display "LLM: model (provider)" in Telegram Execution Stats
- Update default Ollama model from llama3.3:70b to llama3.3:latest
- Fix config tests to include required LLMProvider field
- Update documentation with new message format

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -9,11 +9,11 @@ CLAUDE_MODEL=claude-sonnet-4-5-20250929
 # Ollama Configuration (used when LLM_PROVIDER=ollama)
 # Requires Ollama running locally: https://ollama.ai
 # Recommended models for Mac M3 Ultra (96GB):
-#   - llama3.3:70b (best quality, ~40GB RAM)
+#   - llama3.3:latest (best quality, ~40GB RAM)
 #   - qwen2.5:72b (excellent for technical analysis)
 #   - deepseek-coder-v2:33b (faster, good quality)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.3:70b
+OLLAMA_MODEL=llama3.3:latest
 
 # AI Settings (applies to all providers)
 AI_TIMEOUT_SECONDS=120
