Add recommended models for LM Studio
Document recommended local models for LM Studio log analysis with
VRAM requirements and quality/speed trade-offs, similar to Ollama.

- configs/.env.example: Add 5 recommended models with VRAM info
- README.md: Add models table and selection tips
- CLAUDE.md: Update provider docs and cost optimization section
- internal/ai/lmstudio.go: Add model recommendations in godoc

Also fix outdated reference to json_object response_format which
LM Studio doesn't support.

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -18,7 +18,13 @@ OLLAMA_MODEL=llama3.3:latest
 # LM Studio Configuration (used when LLM_PROVIDER=lmstudio)
 # Requires LM Studio running locally: https://lmstudio.ai
 # Start LM Studio, load a model, and enable "Local Server" mode
-# Default model identifier is "local-model" which uses the currently loaded model
+# Recommended models for log analysis (download from LM Studio's model browser):
+#   - Qwen2.5-32B-Instruct (excellent reasoning, ~20GB VRAM)
+#   - Llama-3.3-70B-Instruct (best quality, ~40GB VRAM)
+#   - Mistral-Small-24B-Instruct (good balance, ~15GB VRAM)
+#   - Phi-4-14B (fast, good quality, ~9GB VRAM)
+#   - Llama-3.2-8B-Instruct (lightweight, ~5GB VRAM)
+# Use "local-model" to automatically use the currently loaded model
 LMSTUDIO_BASE_URL=http://localhost:1234
 LMSTUDIO_MODEL=local-model
 
